# NEOMIND

./: .env.example  .gitignore  README.md  init_neomind_structure.ps1  package-lock.json  package.json  tsconfig.base.json
docs/00_overview/: 00_neomind_vision.md  01_problem_painpoints.md  02_methodology_and_principles.md  core-engine-overview.md
docs/01_psic/: 01_psic_conceptual_model.md  02_psic_data_flows.md  03_psic_algorithms_catalog.md  04_psic_mvp_scope.md
docs/02_nsdt/: 01_nsdt_conceptual_model.md  02_nsdt_domains_and_views.md  03_nsdt_state_model.md
docs/03_context_and_simulation/: 01_context_engine_CSE.md  02_simulation_grid_NSSG.md  03_scenarios_library.md
docs/04_decision_and_c4s/: 01_sodc_model.md  02_c4s_integration.md  03_roles_and_usecases.md
docs/05_integration/: 01_snsif_framework.md  02_sdeia_architecture.md
docs/06_security_and_governance/: 01_scapa_model.md  02_sdghf_model.md
docs/07_truth_memory_drift/: 01_gtv_ground_truth.md  02_smai_state_memory.md  03_sdc_nre_drift_control.md  04_shrsa_vitality_doctrine.md
frontend/: .env.example  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
infra/: Dockerfile.api-gateway  Dockerfile.core-engine  Dockerfile.frontend  docker-compose.yml
ml-engine/: .env.example  README.md  pyproject.toml
ml-engine/src/: __init__.py
ml-engine/src/api/: __init__.py  main.py
ml-engine/src/models/: __init__.py  autoencoder_anomaly.py  gnn_risk_propagation.py  isolation_forest.py  lstm_forecast.py  one_class_svm.py
scripts/: migrate_db.ts  run_local_env.ps1  seed_simulation_data.ts
(+246 files in other folders)
